--- a/workload-core/elaboration-timb-ms/pom.xml
+++ b/workload-core/elaboration-timb-ms/pom.xml
@@ -85,6 +85,13 @@
 			<optional>true</optional>
 		</dependency>
 
+		<!-- Minio 	-->
+		<dependency>
+			<groupId>io.minio</groupId>
+			<artifactId>minio</artifactId>
+			<version>8.5.17</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
