--- a/charts/uc1-workload/templates/pv.yaml
+++ b/charts/uc1-workload/templates/pv.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: data-mef-pvc
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Values.namespace.name }}
 spec:
   accessModes:
     - ReadWriteMany
