--- a/charts/uc1-workload/templates/service.yaml
+++ b/charts/uc1-workload/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: scheduled-client-entrypoint
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Values.namespace.name }}
 spec:
   type: {{ .Values.scheduledClient.service.type }}
   selector:
