--- a/charts/uc1-workload/templates/namespace.yaml
+++ b/charts/uc1-workload/templates/namespace.yaml
@@ -1,8 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: {{ .Release.Name }}-{{ .Values.namespace.name }}
+  name: {{ .Values.namespace.name }}
   labels:
-    {{- range $key, $value := .Values.namespace.labels }}
-    {{ $key }}: {{ $value }}
-    {{- end }}
+      create-ca-bundle: 'true'
