--- a/charts/uc1-workload/values.yaml
+++ b/charts/uc1-workload/values.yaml
@@ -66,7 +66,7 @@ elaborationTimbMs:
     encrypt:
       minio:
         enabled: true
-        endpoint: https://glaciation-tenant.integration
+        endpoint: https://minio.data-wrapping.svc.cluster.local
         bucket: uc1
         credentials:
           accessKey: hXhsTQ9lN4Jbki7Ydm7Z
