Fix Clean directory

--- a/workload-core/scheduled-client/src/main/resources/application.yaml
+++ b/workload-core/scheduled-client/src/main/resources/application.yaml
@@ -41,3 +41,6 @@ management:
                   - info
                   - metric
                   
+directory:
+    clean:
+        beforeDay: ${DIRECTORY_CLEAN_BEFORE_DAY:2}
